# W-bot

./: .cybercore_session.json  .env.example  .gitignore  .w_bot_messages.jsonl  .w_bot_session.json  AGENTS.md  BOOT.md  Dockerfile  HEARTBEAT.md  MEMORY.MD  README.md  README_EN.md  SOUL.md  USER.md  bootstrap.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.clawhub/: lock.json
.github/workflows/: ci.yml  docker.yml  release.yml
configs/: app.json.example
docs/: feishu_channel_setup.md  memory_doc.md  optimization-report.md  subagent-design.md
memory/: 2026-03-27.md  2026-03-28.md  MEMORY.md
skills/: README.md
skills/email-sender/: SKILL.md  _meta.json  config.json.example  email_sender.py  send_email.py
skills/email-sender/.clawhub/: origin.json
skills/html-to-pdf/: SKILL.md  converter.py
skills/iyeque-pdf-reader/: SKILL.md  _meta.json  reader.py
skills/juejin-blog-publisher/: SKILL.md  __init__.py
skills/juejin-hot-news/: SKILL.md
skills/pdf-reader/: README.md  SKILL.md  __init__.py  requirements.txt
skills/skill-creator-2/: SKILL.md
src/agents/: __init__.py  agent.py  cli.py  config.py  context.py  logging_config.py  memory.py  skills.py
src/channels/: models.py
tests/: __init__.py  conftest.py
tests/integration/: test_agent_flow.py
tests/unit/: test_agent.py  test_config.py  test_intent_heuristic.py  test_message_utils.py  test_runtime_status.py  test_text_sanitizer.py  test_tool_analysis.py  test_tools.py  test_web_gateway_auth.py
w_bot/: __main__.py
w_bot/agents/: MEMORY.MD  __init__.py  agent.py  cli.py  config.py  context.py  escalation.py  file_checkpointer.py  memory.py  message_utils.py  openclaw_profile.py  provider_factory.py  runtime_status.py  session_store.py  short_memory_optimizer.py  skills.py  streaming.py  streaming_utils.py  subagent.py  tool_analysis.py
w_bot/security/: network.py
w_bot/template/: AGENTS.md  BOOT.md  HEARTBEAT.md  IDENTITY.md  SOUL.md  TOOLS.md  USER.md
w_bot/utils/: helpers.py
(+95 files in other folders)
