[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cybercore-cli"
version = "0.1.0"
description = "CyberCore CLI Agent (LangGraph + Qwen + PG + Milvus + E2B)"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "psycopg_pool>=3.2.0",
    "pymilvus>=2.4.0",
    "langchain-milvus>=0.1.0",
    "langchain-community>=0.3.0",
    "fastembed>=0.3.6",
    "e2b>=1.0.5",
    "rich>=13.7.1",
    "lark-oapi>=1.4.20,<2.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
cybercore = "agents.cli:run_cli"
agents-cli = "agents.cli:run_cli"
agents-feishu = "channels.feishu.gateway:main"
