[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "w-bot-cli"
version = "0.1.0"
description = "W-bot CLI Agent (LangGraph + Qwen + Local Memory + Milvus + E2B)"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.2.0",
    "pymilvus>=2.4.0",
    "langchain-milvus>=0.1.0",
    "langchain-community>=0.3.0",
    "fastembed>=0.3.6",
    "e2b>=1.0.5",
    "rich>=13.7.1",
    "lark-oapi>=1.4.20,<2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "httpx>=0.28.0,<1.0.0",
    "ddgs>=9.5.5,<10.0.0",
    "readability-lxml>=0.8.4,<1.0.0",
    "prompt-toolkit>=3.0.43,<4.0.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
w_bot = ["template/**/*"]

[project.scripts]
wbot = "w_bot.__main__:main"
w-bot = "w_bot.__main__:main"
agents-cli = "w_bot.agents.cli:run_cli"
agents-feishu = "w_bot.channels.feishu.gateway:main"
agents-web = "w_bot.channels.web.gateway:main"
